# modbus-master-cxx

./: CMakeLists.txt  LICENSE  ModbusAbstractMaster.cpp  ModbusAbstractMaster.h  ModbusAbstractTcpMaster.cpp  ModbusAbstractTcpMaster.h  ModbusReadBits.cpp  ModbusReadBits.h  ModbusReadCoils.cpp  ModbusReadCoils.h  ModbusReadDiscreteInputs.cpp  ModbusReadDiscreteInputs.h  ModbusReadHoldingRegisters.cpp  ModbusReadHoldingRegisters.h  ModbusReadInputRegisters.cpp  ModbusReadInputRegisters.h  ModbusReadRegisters.cpp  ModbusReadRegisters.h  ModbusRtu.cpp  ModbusRtu.h  ModbusRtuMaster.cpp  ModbusRtuMaster.h  ModbusSerialMaster.h  ModbusSerialMaster.tpl  ModbusSlaveProxy.cpp  ModbusSlaveProxy.h  ModbusTxn.cpp  ModbusTxn.h  ModbusTypes.h  ModbusWriteMultipleCoils.cpp  ModbusWriteMultipleCoils.h  ModbusWriteMultipleRegisters.cpp  ModbusWriteMultipleRegisters.h  ModbusWriteSingleCoil.cpp  ModbusWriteSingleCoil.h  ModbusWriteSingleRegister.cpp  ModbusWriteSingleRegister.h  README.md  TxnReturnPath.cpp  TxnReturnPath.h
Linux/: CMakeLists.txt  FdSelectRtuDriver.cpp  FdSelectRtuDriver.h
Linux/examples/: rtuReadCliMain.cpp  rtuWriteCliMain.cpp
Linux/examples/Util/: ParseRegisterStrings.cpp  ParseRegisterStrings.h  PrintModbusMasterExceptionCode.cpp  PrintModbusMasterExceptionCode.h  PrintRegistersFormatted.cpp  PrintRegistersFormatted.h  RegisterUtils.cpp  RegisterUtils.h
UML/: ModbusMaster_classes.uxf
Util/: ModbusMasterExceptionCodeToString.cpp  ModbusMasterExceptionCodeToString.h
incomplete/: ModbusAscii.cpp  ModbusAscii.h  ModbusRtuMaster.cpp  ModbusRtuMaster.h
